--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-opencv-python-headless==4.5.3.56
-matplotlib==3.4.3
-numpy==1.21.2
-pillow==7.0.0
+opencv-python-headless>=4.7.0  
+matplotlib>=3.7.0  
+numpy>=1.23.0 
+pillow>=8.0.0  
 bokeh==2.1.1
 torch==1.11.0
 torchvision==0.12.0
@@ -9,8 +9,8 @@ tqdm==4.63.0
 ipywidgets==7.7.0
 livelossplot==0.5.4
 pytest==7.1.1
-pandas==1.3.5
+pandas>=1.5.0  
 seaborn==0.11.2
 jupyter==1.0.0
-ipykernel==4.10.0
+ipykernel==6.0.0  
 streamlit
