--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ opencv-python-headless>=4.7.0
 matplotlib>=3.7.0  
 numpy>=1.23.0 
 pillow>=8.0.0  
-bokeh==2.1.1
+bokeh>=3.0.3
 torch==1.11.0
 torchvision==0.12.0
 tqdm==4.63.0
