--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
-opencv-python-headless>=4.7.0  
-matplotlib>=3.7.0  
-numpy>=1.23.0 
-pillow>=8.0.0  
-bokeh>=3.0.3
-torch==2.4.1
-torchvision==0.17.0
-tqdm==4.63.0
-ipywidgets==7.7.0
-livelossplot==0.5.4
-pytest==7.1.1
-pandas>=1.5.0  
-seaborn==0.11.2
-jupyter==1.0.0
-ipykernel==6.0.0  
+opencv-python-headless
+matplotlib
+numpy
+pillow
+bokeh
+torch
+torchvision
+tqdm
+ipywidgets
+livelossplot
+pytest
+pandas
+seaborn
+jupyter
+ipykernel
 streamlit
